Fixed not visible separator

--- a/styles/[projectId].module.scss
+++ b/styles/[projectId].module.scss
@@ -50,7 +50,7 @@
         column-gap: 3em;
 
         margin-bottom: 5vw;
-        border-bottom: 1px solid darken($textColor, 90%);
+        border-bottom: 1px solid darken($textColor, 80%);
         padding-bottom: 5vw;
 
         p {
